# AIoT-herdeye

./: README.md
herdeye_barnStalls/control_apps/: board_init.c  board_init.h  clock_init.c  clock_init.h  main.c  pin_init.c
herdeye_barnStalls/control_apps/app_drv/: brighetness.h  door.c  lora.c  lora.h  relay.c  relay.h  stepperMotor.c  stepperMotor.h  water_level.c  water_level.h  weight.h
herdeye_barnStalls/device/: mm32f5277e.h
herdeye_barnStalls/device/drivers/: hal_adc.c  hal_adc.h  hal_dma_request.h  hal_flexcan.c
herdeye_mcu/control_apps/: board_init.h  clock_init.c  pin_init.c  pin_init.h
herdeye_mcu/control_apps/app_drv/: brighetness.c  door.h  lora.c  lora.h  relay.c  relay.h  stepperMotor.c  stepperMotor.h  weight.c  ws2812.c  ws2812.h
herdeye_mcu/device/drivers/: hal_flexcan.h  hal_spi.c
herdeye_mcu/device/mdk/: startup_mm32f5277e.S
herdeye_rdk/herdeye_ws/src/herdeye_bringup/: CMakeLists.txt  package.xml
herdeye_rdk/herdeye_ws/src/herdeye_bringup/launch/: launch_nodes.launch.py
herdeye_rdk/herdeye_ws/src/herdeye_gps/: package.xml  setup.cfg
herdeye_rdk/herdeye_ws/src/herdeye_gps/herdeye_gps/: Herdeye_gps.py
herdeye_rdk/herdeye_ws/src/herdeye_home/: package.xml  setup.cfg  setup.py
herdeye_rdk/herdeye_ws/src/herdeye_home/herdeye_home/: herdeye_home.py
herdeye_rdk/herdeye_ws/src/herdeye_iot/: setup.cfg  setup.py
herdeye_rdk/herdeye_ws/src/herdeye_iot/herdeye_iot/: Herdeye_IOT.py  Herdeye_IOTDA.py
herdeye_rdk/herdeye_ws/src/herdeye_move/herdeye_move/: Herdeye_test.py
herdeye_rdk/herdeye_ws/src/herdeye_sensor_msg/: package.xml
herdeye_rdk/herdeye_ws/src/herdeye_sensor_msg/msg/: MultiSensorData.msg
herdeye_rdk/herdeye_ws/src/herdeye_sht30/: setup.py
herdeye_rdk/herdeye_ws/src/herdeye_sht30/herdeye_sht30/: Herdeye_sht30.py
herdeye_rdk/herdeye_ws/src/herdeye_volcllm/: package.xml  setup.cfg  setup.py
herdeye_rdk/herdeye_ws/src/herdeye_volcllm/herdeye_volcllm/: herdeye_volcllm_client.py  herdeye_volcllm_server.py
herdeye_rdk/herdeye_ws/src/herdeye_volcllm_srv/: CMakeLists.txt  package.xml
herdeye_rdk/one_sdk/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.esp32  README.md
herdeye_rdk/one_sdk/.codebase/: apps.yaml
herdeye_rdk/one_sdk/.codebase/pipelines/: build_esp32.yml  cmake_ut.yaml  run_example_tests.yml
herdeye_rdk/one_sdk/examples/chat/function_call/: main_function_call.c
herdeye_rdk/one_sdk/examples/chat/text_image/: main_text_image.c
herdeye_rdk/one_sdk/examples/onesdk_esp32/: .gitignore  CMakeLists.txt  README.md  components_cmakelists.txt  sdkconfig.defaults
herdeye_rdk/one_sdk/examples/onesdk_esp32/main/: CMakeLists.txt  chat.h  sntp_example_main.c  station_example_main.c
herdeye_rdk/one_sdk/examples/onesdk_iot/: CMakeLists.txt  onesdk_iot.c
herdeye_rdk/one_sdk/examples/onesdk_realtime/: CMakeLists.txt  main.c
herdeye_rdk/one_sdk/external_libs/libwebsockets/include/libwebsockets/: lws-freertos.h
herdeye_rdk/one_sdk/include/: infer_inner_chat.h  infer_realtime_ws.h  iot_mqtt.h  onesdk.h  onesdk_chat.h
herdeye_rdk/one_sdk/include/iot/: iot_ota_api.h  iot_ota_header.h  iot_ota_utils.h  iot_utils.h
herdeye_rdk/one_sdk/include/protocols/: private_lws_http_client.h
herdeye_rdk/one_sdk/scripts/: copy_onesdk_src.sh  replace_sensitive.py
herdeye_rdk/one_sdk/src/: infer_inner_chat.c  infer_realtime_ws.c  iot_basic.c  onesdk.c  onesdk_chat.c  onesdk_iot.c  onesdk_rt.c
herdeye_rdk/one_sdk/src/aigw/: auth.c  llm.c
herdeye_rdk/one_sdk/src/iot/: dynreg.c  iot_kv.c  iot_mqtt.c  iot_popen.c  iot_utils.c
herdeye_rdk/one_sdk/src/iot/log/: iot_log.c  iot_log_report.c
herdeye_rdk/one_sdk/src/iot/ota/: iot_ota_api.c  iot_ota_utils.c
herdeye_rdk/one_sdk/src/iot/thingmodel/: custom_topic.c  device_delay.c  event.c  iot_ntp.c  iot_tm_api.c  property.c  service.c  shadow.c  webshell.c
herdeye_rdk/one_sdk/src/protocols/: http.c  http_libs.c  lws_http_client.c  lws_http_download.c
herdeye_rdk/one_sdk/src/util/: aws_json.c  util.c
herdeye_rdk/src/herdeye_gps/: setup.py
herdeye_rdk/src/herdeye_gps/herdeye_gps/: Herdeye_gps.py
herdeye_rdk/src/herdeye_iot/: package.xml  setup.py
herdeye_rdk/src/herdeye_move/: package.xml  setup.cfg  setup.py
herdeye_rdk/src/herdeye_sensor_msg/: CMakeLists.txt
herdeye_rdk/src/herdeye_sensor_msg/msg/: MultiSensorData.msg
herdeye_rdk/src/herdeye_sht30/: package.xml  setup.cfg
herdeye_rdk/src/herdeye_sht30/herdeye_sht30/: Herdeye_sht30.py
herdeye_rdk/src/herdeye_yolo/: package.xml  setup.cfg  setup.py
herdeye_rdk/src/herdeye_yolo/herdeye_yolo/: Herdeye_depth.py  Herdeye_floor_yolo.py  Herdeye_floor_yolo_ret.py  Herdeye_sky_yolo.py  Herdeye_sky_yolo_ret.py  Herdeye_yolo.py  Herdeye_yolo_ret.py
herdeye_springboot/herdeye_sql/: yolo.sql
herdeye_springboot/springboot/: pom.xml
herdeye_springboot/springboot/src/main/java/com/example/: MessageDataHolder.java  SpringbootApplication.java
herdeye_springboot/springboot/src/main/java/com/example/controller/: ControlController.java  DataPushController.java  DataWebSocketHandler.java  DeepSeekController.java  FileController.java  ImageyoloController.java  IoTHttpController.java  MissionController.java  RtSdController.java  RtyoloController.java  SensorController.java  SseController.java  UavController.java  WebController.java  WorkerController.java
herdeye_springboot/springboot/src/main/java/com/example/entity/: Control.java  Imageyolo.java  Mission.java  RtSd.java  (+4 more)
herdeye_springboot/springboot/src/main/resources/: application.yml
herdeye_springboot/springboot/src/main/resources/mapper/: ControlMapper.xml  MissionMapper.xml  RtSdMapper.xml  UavMapper.xml  WorkerMapper.xml
herdeye_vue/vue/: .env.development  package-lock.json
herdeye_vue/vue/public/: websocket-shared-worker.js
herdeye_vue/vue/src/: main.js
herdeye_vue/vue/src/assets/css/: manager.css
herdeye_vue/vue/src/router/: index.js
herdeye_vue/vue/src/services/: request.js  sseService.js
herdeye_vue/vue/src/views/: Manager.vue  sse.js
herdeye_vue/vue/src/views/manager/: AI.vue  Home.vue  SenDataHis.vue  details.vue  task.vue  video.vue
(+22 files in other folders)
